# python-junior-test1

./: README.md  main.py  pyproject.toml
src/: bulders.py  parsers.py  reports.py  validators.py
